--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 </body>
 <div class="background">
-<img src="img/rodgers.jpg" alt="Image of Mr Rodgers" >
+  <img src="img/rodgers.jpg" alt="Image of Mr Rodgers" >
 </div>
-<body>
+<form>
+  <label for="number">Hello neighbor!!! Could you do me a solid and enter a number?</label><br>
+  <input type="text" id="number" name="number"><br>
+  <input type="button" value="Submit" onclick="runNumbr()">
 </html>
