fix all incorrect uses of rodgers with rogers

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 </body>
 <div class="background">
-  <img src="img/rodgers.jpg" alt="Image of Mr Rodgers" >
+  <img src="img/rogers.jpg" alt="Image of Mr Rogers" >
 </div>
 <form>
   <label for="number">Hello neighbor!!! Could you do me a solid and enter a number?</label><br>
