--- a/index.html
+++ b/index.html
@@ -8,12 +8,33 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Hell0 Ne1ghb0r</title>
 </head>
+<style>
+  body {
+    background-image: url("img/rogers.jpg");
+    background-color: #cccccc;
+    height: 100%;
+    width: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+</style>
 </body>
-<div class="background">
-  <img src="img/rogers.jpg" alt="Image of Mr Rogers" >
-</div>
+<p>It’s a beautiful day in this neighborhood, A beautiful day for a neighbor. Could you be mine?</p>
+<p>It’s a neighborly day in this beauty wood, A neighborly day for a beauty,</p>
+<p>Would you be mine? Could you be mine? I have always wanted to have a neighbor just like you,</p>
+<p>I’ve always wanted to live in a neighborhood with you.</p>
+<p>So let’s make the most of this beautiful day,</p>
+<p>Since we’re together we might as well say,</p>
+<p>Would you be mine?</p>
+<p>Could you be mine?</p>
+<p>Won’t you be my neighbor?</p>
+<p>Won’t you please,</p>
+<p>Won’t you please?</p>
+<p>Please won’t you be my neighbor?</p>
+<br>
+<br>
 <form>
-  <label for="number">Hello neighbor!!! Could you do me a solid and enter a number?</label><br>
+  <label for="number">Hello neighbor!!! What's your favorite number?</label><br>
   <input type="text" id="number" name="number"><br>
   <input type="button" value="Submit" onclick="runNumbr()">
 </html>
