it will add js link in html after an hour of beating my head against the wall

--- a/index.html
+++ b/index.html
@@ -4,37 +4,41 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/scripts.js"></script>
   <title>Hell0 Ne1ghb0r</title>
 </head>
-<style>
-  body {
-    background-image: url("img/rogers.jpg");
-    background-color: #cccccc;
-    height: 100%;
-    width: auto;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-</style>
-</body>
-<p>It’s a beautiful day in this neighborhood, A beautiful day for a neighbor. Could you be mine?</p>
-<p>It’s a neighborly day in this beauty wood, A neighborly day for a beauty,</p>
-<p>Would you be mine? Could you be mine? I have always wanted to have a neighbor just like you,</p>
-<p>I’ve always wanted to live in a neighborhood with you.</p>
-<p>So let’s make the most of this beautiful day,</p>
-<p>Since we’re together we might as well say,</p>
-<p>Would you be mine?</p>
-<p>Could you be mine?</p>
-<p>Won’t you be my neighbor?</p>
-<p>Won’t you please,</p>
-<p>Won’t you please?</p>
-<p>Please won’t you be my neighbor?</p>
-<br>
-<br>
-<form>
+<body>
+  <style>
+    body {
+      background-image: url("img/rogers.jpg");
+      background-color: #cccccc;
+      height: 100%;
+      width: auto;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  </style>
+
+  <p>It’s a beautiful day in this neighborhood, A beautiful day for a neighbor. Could you be mine?</p>
+  <p>It’s a neighborly day in this beauty wood, A neighborly day for a beauty,</p>
+  <p>Would you be mine? Could you be mine? I have always wanted to have a neighbor just like you,</p>
+  <p>I’ve always wanted to live in a neighborhood with you.</p>
+  <p>So let’s make the most of this beautiful day,</p>
+  <p>Since we’re together we might as well say,</p>
+  <p>Would you be mine?</p>
+  <p>Could you be mine?</p>
+  <p>Won’t you be my neighbor?</p>
+  <p>Won’t you please,</p>
+  <p>Won’t you please?</p>
+  <p>Please won’t you be my neighbor?</p>
+  <br>
+  <br>
+  <form>
   <label for="number">Hello neighbor!!! What's your favorite number?</label><br>
   <input type="text" id="number" name="number"><br>
-  <input type="button" value="Submit" onclick="runNumbr()">
+  <input type="button" value="Submit" onclick="roboRogers()">
+  </form>
+  <div id="result">Here</div>
+</body>
 </html>
