add a max number condition

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
   <input type="text" id="number" name="number"><br>
   <input type="button" value="Submit" onclick="roboRogers()">
   </form>
-  <div id="result">Here</div>
+  <div id="result"></div>
 </body>
 </html>
